--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,10 @@
     justify-content: flex-end;
 }
 
+.total {
+    max-width: 1440px;
+}
+
 .past-failure-title {
     color: #151414;
     font-size: 40px;
@@ -88,12 +92,15 @@
     margin: 20px;
 
 }
-.past-failures-content > h4{
+
+.past-failures-content>h4 {
     margin-bottom: 15px;
 }
-.past-failure-description > p{
+
+.past-failure-description>p {
     margin-bottom: 15px;
 }
+
 .plan-title {
     text-align: center;
     color: #151414;
@@ -111,23 +118,31 @@
     font-weight: 700;
     line-height: normal;
 }
-.about-info{
+
+.about-info {
     max-width: 60px;
-     
+
 }
-.about-plan > h4 {
-    margin-top: 20px;
+
+.plan {
+    max-width: 1500px;
+    margin: 50px;
 }
-.about-plan > p {
+
+.about-plan>h4 {
     margin-top: 20px;
 }
 
-.plan-info-container{
+.about-plan>p {
+    margin-top: 20px;
+}
+
+.plan-info-container {
     padding: 55px;
     display: flex;
     justify-content: space-around;
     text-align: center;
-    
+
 }
 
 .info-description {
@@ -138,4 +153,44 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+.banner2{
+    background-image: url(../images/gradient2.png) ,url(../images/watch.png)  ;
+    background-repeat: no-repeat;
+    background-position: 180px;
+    border-radius: 5px;
+   
+}
+
+
+.banner2-title {
+    max-width: 400px;
+    color: #FFF;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-top: 40px;
+    
+    margin: 50px 0px;
+}
+.banner2-button{
+    color:#F15B22;
+    text-align: right;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 5px;
+    background: #FFF; 
+    border: none;
+    padding: 15px 25px;
+    
+    
+}
+.banner2-info{
+    display: block;
+    margin-left: 200px;
+    padding-left: 40px;
+
 }
