--- a/styles/style.css
+++ b/styles/style.css
@@ -159,6 +159,7 @@
     background-repeat: no-repeat;
     background-position: 180px;
     border-radius: 5px;
+    height: 300px;
    
 }
 
@@ -172,7 +173,7 @@
     line-height: normal;
     padding-top: 40px;
     
-    margin: 50px 0px;
+    margin: 40px 0px;
 }
 .banner2-button{
     color:#F15B22;
@@ -185,6 +186,7 @@
     background: #FFF; 
     border: none;
     padding: 15px 25px;
+    margin-bottom: 50px;
     
     
 }
@@ -193,4 +195,52 @@
     margin-left: 200px;
     padding-left: 40px;
 
+}
+footer{
+    display: flex;
+    gap: 100px;
+    background: #151414;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+.footer-column{
+    display: block;
+    width: 50%;
+}
+.social-links a{
+    margin-right: 20px;
+}
+.section-title{
+    color: #F8F8F8;
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.section-description p{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+margin-bottom: 24px; /* 162.5% */
+}
+input{
+    background: #151414;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #FFF;
+    border-radius: 5px;
+    border-color: #FFF;
+    
+}
+.contact input[type="email"],button{
+    display: block;
+    
+    
+}
+.contact{
+    margin-bottom: 15px;
 }
